# NVTK

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  uwsgi.conf  webpack.config.js
accessionTK/: README.md  index.html  pyproject.toml
accessionTK/accessiontk/: utils.py
accessionTK/accessiontk/htmlmap/: main.py
accessionTK/accessiontk/htmlmap/templates/: index.html
accessionTK/accessiontk/webmap/: __init__.py  index.html  mapapp.js
accessionTK/example/accessiontk/webmap/: __init__.py  index.html  mapapp.js  meta_fix.R
deqr/: decode-test.py  summarise.R
imgutils/: phash-dedupe.py  test.py
misc-utils/abt6-plantlabels/: print_labels.py
misc-utils/deqr/: summarise.R
misc-utils/imgutils/: test.py
misc-utils/location-sheets/: gluekhs.py  pdf-2xA5-to-A4.py  requirements.txt
misc-utils/location-sheets/templates/: ctx-site-sheet.ods
platemate/: app.R  upload.R
platemate/nexteramate/: app.R  i5_sets.tsv  i5s.csv  i7_sets.tsv  i7s.csv
platemate/platemate/: app.R
platemate/tecanalyze/: app.R
qrapi/: __main__.py  api.py  scanimage.py
qrmagic/: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  api.py  labelmaker.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scanimages.py  setup.cfg  setup.py  uwsgi.conf  webpack.config.js
qrmagic/qrmagic/: __init__.py  _version.py  api.py  labelmaker.py  scanimages.py
qrmagic/src/: extra.js  imagesort.js  index.js  labelsheet.js  labeltypes.json
qrmagic/src/static/: imagesort.css  imagesort.html  index.html  labelsheet.html
site-sheet-maker/: README.md  gen-sheets.py  pyproject.toml
site-sheet-maker/nvtk_ssm/: ssm.py  svglue.py
src/: imagesort.js
src/static/: imagesort.css  imagesort.html  index.html
tecanalyze/: app.R
