[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
version = "0.1.1"
name = "accessiontk"
description = "Tools to manage lists of accessions"
dependencies = [
    "pillow",
    "tqdm",
    "heif-image-plugin",
]
readme = "README.md"
authors = [
    {name = "kdm9", email = "foss@kdmurray.id.au"},
]
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

[project.scripts]
accessiontk-webmap = "accessiontk.webmap:main"
